--- a/Flvcd for Chrome/src/manifest.json
+++ b/Flvcd for Chrome/src/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "FLVCD for Chrome",
+	"name": "硕鼠Chrome助手",
 	"version": "1.0.0",
 	"description": "硕鼠Chrome插件",
 	"permissions": ["tabs"],
