--- a/Flvcd for Chrome/src/manifest.json
+++ b/Flvcd for Chrome/src/manifest.json
@@ -1,13 +1,16 @@
 {
 	"name": "硕鼠Chrome助手",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "硕鼠Chrome插件",
 	"permissions": ["tabs"],
+	"icons": {
+      "48": "images/icon_48.png"
+   },
 	"background": {
 		"page": "background.html"
 	},
 	"page_action": {
-		"default_icon": "icon.png"
+		"default_icon": "images/icon.png"
 	},
 	"manifest_version": 2
 }
